<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.uniovi.reflection</groupId>
	<artifactId>ProgQuery</artifactId>
	<version>2.0.0</version>
	<packaging>jar</packaging>	  	
	<dependencies>
		<dependency>
		    <groupId>org.kohsuke.metainf-services</groupId>
		    <artifactId>metainf-services</artifactId>
		    <version>1.8</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>  
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j</artifactId>
			<version>4.4.3</version>
		</dependency> 
		<dependency> 
			<groupId>org.neo4j.driver</groupId>
			<artifactId>neo4j-java-driver</artifactId>
			<version>4.4.3</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
		</dependency>
	</dependencies>
	<build>	
	<plugins>
  	<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
            <source>15</source>
        	<target>15</target>
          	<compilerArgs>            
				<arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
				<arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
				<arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
				<arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
          	</compilerArgs>
        </configuration>
      </plugin>	  
    <plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <configuration>
        <archive>
          <manifest>
            <mainClass>es.uniovi.reflection.progquery.ProgQueryPlugin</mainClass>
          </manifest>
        </archive>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
        <appendAssemblyId>false</appendAssemblyId>
      </configuration>
    </plugin> 
		</plugins>
	</build>
</project>